--- a/indexPaperRepo.html
+++ b/indexPaperRepo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh" dir="ltr" lang="zh"><head profile="http://purl.org/net/ns/metaprof">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>PaperRepo</title>
+<title>CVPR</title>
 <meta name="robots" content="INDEX,FOLLOW">
 <meta name="keywords" content="キーワード,テンプレート,ネットマニア" xml:lang="zh" lang="zh">
 <meta name="description" content="ネットマニアテンプレート" xml:lang="zh" lang="zh">
